--- a/manga/templates/base.html
+++ b/manga/templates/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>百合会漫画收藏</title>
+    <title>漫画收藏</title>
 
     <!-- meta -->
     <meta charset="UTF-8">
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="col-md-4 col-sm-5 col-xs-8">
                 <div class="logo">
-                    <h1><a href="{% url 'manga_url:index_url' %}" style="color:#267fd9;"><b>百合</b>大法好</a></h1>
+                    <h1><a href="{% url 'manga_url:index_url' %}" style="color:#267fd9;"><b>漫画</b>管理</a></h1>
                 </div>
             </div><!-- col-md-4 -->
         </div>
@@ -81,28 +81,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <p class="copyright">&copy 2018 - <a href="https://bbs.yamibo.com/"
-                                                        target="_blank" title="百合会">百合会论坛</a>
-                    <!--- 由<a href="http://zmrenwu.com/" title="网页模板" target="_blank">追梦人物的博客</a>修改-->
+                <p class="copyright">
+                    &copy 2018 - <a href="" target="_blank">漫画管理</a>
                 </p>
             </div>
         </div>
     </div>
 </footer>
-
-<!-- Mobile Menu -->
-{#<div class="overlay overlay-hugeinc">#}
-{#    <button type="button" class="overlay-close"><span class="ion-ios-close-empty"></span></button>#}
-{#    <nav>#}
-{#        <ul>#}
-{#            <li><a href="index.html">首页</a></li>#}
-{#            <li><a href="full-width.html">博客</a></li>#}
-{#            <li><a href="about.html">关于</a></li>#}
-{#            <li><a href="contact.html">联系</a></li>#}
-{#        </ul>#}
-{#    </nav>#}
-{#</div>#}
-
 <script src="{% static "blog/js/script.js" %}"></script>
 
 </body>
