--- a/manga/templates/manga/create_chapter.html
+++ b/manga/templates/manga/create_chapter.html
@@ -17,7 +17,7 @@
             </div>
 
             <div class="col-md-4">
-                <label for="{{ form.link.id_for_label }}">百合会链接：</label>
+                <label for="{{ form.link.id_for_label }}">链接：</label>
                 {{ form.link }}
                 {{ form.link.errors }}
             </div>
@@ -37,7 +37,7 @@
             </div>
 
             <div class="col-md-4">
-                <label for="{{ form.link.id_for_label }}">百合会链接：</label>
+                <label for="{{ form.link.id_for_label }}">链接：</label>
                 {{ form.link }}
                 {{ form.link.errors }}
             </div>
