--- a/manga/templates/manga/detail.html
+++ b/manga/templates/manga/detail.html
@@ -16,7 +16,7 @@
             </div>
         </form>
     </div>
-    <button class="btn btn-default" style="color:#267fd9; text-decoration:none; border:0px;"><a href="/create_chapter/?pk={{ book.pk }}">增加</a></button>
+    <button class="btn btn-default" style="color:#267fd9; text-decoration:none; border:0px;"><a href="/create_chapter/?pk={{ book.pk }}">增加章节</a></button>
     {% if error_msg %}
         <p>{{ error_msg }}</p>
     {% endif %}
